Update .classpath, org.eclipse.jdt.core.prefs, pom.xml, and 23 more files